@@ -59,13 +59,27 @@
           </widget>
          </item>
          <item row="4" column="0">
+          <widget class="QLabel" name="label_2x">
+           <property name="text">
+            <string>Window grouping:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="4" column="1">
+          <widget class="QCheckBox" name="grouping">
+           <property name="text">
+            <string>Enabled</string>
+           </property>
+          </widget>
+         </item>
+         <item row="5" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
             <string>Titlebar padding:</string>
            </property>
           </widget>
          </item>
-         <item row="4" column="1">
+         <item row="5" column="1">
           <widget class="KIntSpinBox" name="titleBarPad">
            <property name="suffix">
             <string>px</string>
@@ -271,6 +285,7 @@
   <tabstop>roundBottom</tabstop>
   <tabstop>outerBorder</tabstop>
   <tabstop>borderlessMax</tabstop>
+  <tabstop>grouping</tabstop>
   <tabstop>titleBarPad</tabstop>
   <tabstop>useShadows</tabstop>
   <tabstop>activeShadowSize</tabstop>
